--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,10 +25,15 @@ a:hover{
 
 #apresentacao{
     border-color: var(--vermelho) !important;
-    height: 300px;
+    height: 400px;
 }
 
-#perfil{
+#perfil1{
+    width: 350px;
+    border-color: var(--vermelho) !important;
+}
+
+#perfil2{
     width: 350px;
     border-color: var(--vermelho) !important;
 }
